fixing spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,12 +106,10 @@ div.kidpics {
 img.julia {
 	height: 200px;
 	padding: 5px;
-	margin-right: 0px;
 }
 img.greg {
 	height: 200px;
 	padding: 5px;
-	margin-left: 180px;
 }
 .aboutjulia {
 	font-family: "Quicksand", Trebuchet;
